Trial version before the Thursday lecture

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
 
-    <a href="second.html" id="link1">Second page of my personal website~</a>
+    <a href="second.html">Second page of my personal website~</a>
 	<div>
 	<h1> Some boring and trivial Personal information</h1>
 	<p>Well, I think there are nothing too much I want to say about myself.
