indext.html and css passes validation

--- a/index.html
+++ b/index.html
@@ -15,28 +15,31 @@
 	<p>Well, I think there are nothing too much I want to say about myself.
 	   I’m Yifei Sun, an international student from Shanghai China.
 	   I’m currently a senior in business analytics field. This is actually my fifth year studying in America. I spent my final year of high school in Kansas city.> 
-	   Although I have one extra year of English-learning environment, my English is still terrible, so please forgive me if I say anything stupid or use some awkward words.</p4>
-	   I really appreciate your understanding. Thank you!</p>
-	<p2> My family members always say I’m a stone-like boy. Well, this statement might sound like a little mean, but in my perspectives, it’s pretty accurate to describe my personalities. I’m an obedient person. I never went to bars or pubs or do anything that a young, rigorous juvenile should try. I like to follow the rules, I like the feeling that everything is done based on right procedure, everything is carried out with the correct methods. My friends always say that there is a fifty-year-old soul accidentally stuck in a twenty—year-old body ~. I like to share the most genuine myself to everyone. Unlike many ambitious students, I’m practical and traditional. I evaluate family as the most important part of my life. A decent salary and a chance to fulfill my filial responsibility is enough to me. Well, after talking about so many serious things, let me tell you why I’m a good stone~. I’m diligent to my work. I might not be a good leader, but I must be a solid team member. I’m plain and honest to other people. If you are considering making new friend, I might be a good choice XD. Anyway, in the end, thanks all of you guys for spending time to get to know me.</p2>
-	<br></br>
+	   Although I have one extra year of English-learning environment, my English is still terrible, so please forgive me if I say anything stupid or use some awkward words.
+	   I really appreciate your understanding. Thank you!
+	   My family members always say I’m a stone-like boy. Well, this statement might sound like a little mean, but in my perspectives, it’s pretty accurate to describe my personalities. 
+	   I’m an obedient person. I never went to bars or pubs or do anything that a young, rigorous juvenile should try. 
+	   I like to follow the rules, I like the feeling that everything is done based on right procedure, everything is carried out with the correct methods. My friends always say that there is a fifty-year-old soul accidentally stuck in a twenty—year-old body ~. I like to share the most genuine myself to everyone. Unlike many ambitious students, I’m practical and traditional. I evaluate family as the most important part of my life. A decent salary and a chance to fulfill my filial responsibility is enough to me. Well, after talking about so many serious things, let me tell you why I’m a good stone~. I’m diligent to my work. I might not be a good leader, but I must be a solid team member. I’m plain and honest to other people. 
+	   If you are considering making new friend, I might be a good choice XD. Anyway, in the end, thanks all of you guys for spending time to get to know me.</p>
+	<br>
 	<img src="picture1.jpg" alt="Me and my mother~" width="500" height="500" class="photo" />
 	</div>
-	<br></br>
+	<br>
 	<div>
 	<h2>I'm not a guy who enjoys taking photographs, so I think I just attach another picture here...</h2>
 	<img src="picture2.jpg" alt="Having frineds is really a nice thing" width="600" height="500" class="photo" />
 	</div>
-	<br></br>
+	<br>
 	<div>
-	<h2> As a video and online game addictor, my first list in html surely should be a rank of my favoirte games.
+	<h2> As a video and online game addictor, my first list in html surely should be a rank of my favoirte games.</h2>
 	<h3>I linked them to their English WiKi Pages</h3>
 	<ol>
-		<li><a href="https://en.wikipedia.org/wiki/World_of_Warcraft" target="_blank">World of Warcraft</a><p3> My family has a family history with this game</p3></li>
-		<li><a href="https://en.wikipedia.org/wiki/Pok%C3%A9mon" target="_blank">Pokemon series</a><p3> Simply like them, I started playing this series since Kindergarden time</p3></li>
-		<li><a href="https://en.wikipedia.org/wiki/Monster_Hunter" target="_blank">Monsterhunter</a><p3> This series lead me to play more and more act games..</p3></li>
+		<li><a href="https://en.wikipedia.org/wiki/World_of_Warcraft" target="_blank">World of Warcraft</a>My family has a family history with this game</li>
+		<li><a href="https://en.wikipedia.org/wiki/Pok%C3%A9mon" target="_blank">Pokemon series</a>Simply like them, I started playing this series since Kindergarden time</li>
+		<li><a href="https://en.wikipedia.org/wiki/Monster_Hunter" target="_blank">Monsterhunter</a>This series lead me to play more and more act games..</li>
 	</ol>
 	</div>
-	<br></br>
+	<br>
 	<div>
 	<table>
 	<caption>..Really have no ideas what to talk about, maybe I just put my favourite and least favourtie </caption>
